[tool.poetry]
name = "task-assignment"
version = "0.1.0"
description = "Task management app"
authors = ["Eko Supriyono"]
license = "MIT"
readme = "README.md"
packages = [{include = "task_assignment"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.100.0"
pillow = "^10.0.0"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
